src/_sass/components/_components.contact.scss
.contact {
  background-color: $color-grey--light;
  padding-top: 75px;
  padding-bottom: 75px;
  margin-top: -60px;
  margin-bottom: 0;

  .wrapper {
    > * {
      flex: 1 1 50%;
    }
  }

  .content {
    padding-right: 80px;
  }

  h1 {
    text-align: left;
  }

  dl {
    @include h5;
  }

  dt {
    display: inline;
    width: auto;
    font-weight: 700;

    &:after {
      content: ': '
    }
  }

  dd {
    display: inline;
    margin: 0;

    &:after {
      content: "\A";
      white-space: pre;
    }
  }

  .map {
    border: 7px solid $color-grey--lightest;

    iframe {
      width: 100%;
      height: 100%;
    }
  }

  h2 {
    font-weight: 700;
    margin-bottom: 20px;

    @include display;
    @include h3;
  }

  p {
    @include body-large;
  }
}

